# cospy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
apps/coslaunch/: COSLaunch.py  README  app.py  coslaunch.py  main.py
apps/cosservice/: COSService.py  README  app.py  cosservice.py  main.py
apps/costopic/: README  app.py  costopic.py  main.py
apps/cviz/: CViz.py  README  app.py  cviz.py  main.py
config/: api.yaml  conduct.yaml  cos.ini  evaluator.yaml  land.yaml  legata.yaml  logger.yaml  mapping.yaml  network.yaml  rules.colreg.yaml  rules.examiner.yaml  sea.yaml  sky.yaml  subsystem.yaml  vessel.yaml  weather.yaml
config/data/: cube.csv  dimensions.csv  enumeration.csv  facts.csv  maritime.s3db  maritime.sql  maritime.workingset.s3db  maritime.xml
config/map/alesund/: land.s3db  sea.s3db  sky.s3db
config/map/atlantic/: land.s3db  sea.s3db  sky.s3db
config/map/istanbul/: land.s3db  sea.s3db  sky.s3db
config/map/kavak-kandilli/: land.s3db  sea.s3db  sky.s3db
config/maritime/regulation/: definitions.s3db
config/simulation/alesund/: vessel.s3db
config/simulation/istanbul/: rules.yaml  vessel.s3db
config/simulation/kavak-kandilli/: vessel.s3db
config/vehicle/ship/: container.yaml  ferry.yaml  fishingvessel.yaml  motorboat.yaml  simple.yaml  yacht.yaml
docs/: GettingStarted.md  index.md  modules.md
docs/images/: README
docs/taxonomies/: jurisdiction.md  protocol.md  traffic.md  vessel.md
idl/: Actor.idl  Beacon.idl  Device.idl  Land.idl  MQ.idl  ObjectManager.idl  Port.idl  Radar.idl  Sea.idl  Service.idl  Simulation.idl  Timer.idl  Topic.idl  Vessel.idl  World.idl
samples/simulation/minsim/: Minsim.py  README  main.py
samples/simulation/openbridge/: README  httpd.py  manifest.webmanifest  sw.js
templates/cluster/config/: beacon.yaml  cos.ini  (+12 more)
tests/: test_basic.py
(+683 files in other folders)
